--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 fastapi = "^0.104.1"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
 sqlalchemy = "^2.0.23"
+pydentic = {extras = ["email"], version = "^0.0.1.dev3"}
+pydantic = {extras = ["email"], version = "^2.4.2"}
 
 
 [build-system]
