--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pydentic = {extras = ["email"], version = "^0.0.1.dev3"}
 pydantic = {extras = ["email"], version = "^2.4.2"}
 psycopg2 = "^2.9.9"
 alembic = "^1.12.1"
+jinja2 = "^3.1.2"
 
 
 [build-system]
