--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "goit-python-web-fastapi-lect-01"
-version = "0.1.0"
+version = "0.2.0"
 description = ""
 authors = ["lexxai <lexxai@users.noreply.github.com>"]
 readme = "README.md"
@@ -15,6 +15,9 @@ pydantic = {extras = ["email"], version = "^2.4.2"}
 psycopg2 = "^2.9.9"
 alembic = "^1.12.1"
 jinja2 = "^3.1.2"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+python-multipart = "^0.0.6"
 
 
 [build-system]
