--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.6"
 libgravatar = "^1.0.4"
+fastapi-mail = "^1.4.1"
 
 
 [build-system]
