--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,9 @@ fastapi-mail = "^1.4.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pylint.format]
+max-line-length = "119"
+
+[tool.black]
+line-length = 119
