--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.6"
 libgravatar = "^1.0.4"
 fastapi-mail = "^1.4.1"
-redis = "^5.0.1"
+fastapi-limiter = "^0.1.5"
 
 
 [build-system]
