--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ python-multipart = "^0.0.6"
 libgravatar = "^1.0.4"
 fastapi-mail = "^1.4.1"
 fastapi-limiter = "^0.1.5"
+cloudinary = "^1.36.0"
 
 
 [build-system]
