--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ libgravatar = "^1.0.4"
 fastapi-mail = "^1.4.1"
 fastapi-limiter = "^0.1.5"
 cloudinary = "^1.36.0"
+colorlog = "^6.7.0"
 
 
 [build-system]
